[package]
name = "fnky_parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "0.20", features = ["lexer", "unicode"] }
paste = "1.0.14"

[build-dependencies]
lalrpop = "0.20"
